# rust-simple-api

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  nuxt.config.js  package.json  test.csv
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
layouts/: default.vue
migrations/: 20240216143242_init.sql  20240221143957_label.sql
pages/: index.vue
server/: Cargo.toml
server/migrations/2023-01-07-145601_create_logs/: down.sql  up.sql
server/src/: db.rs  handlers.rs  main.rs  model.rs  schema.rs
src/: handlers.rs  main.rs  repositories.rs
src/handlers/: label.rs  todo.rs
src/repositories/: labels.rs  todo.rs
types/: google-api.ts
